--- a/.solargraph.yml
+++ b/.solargraph.yml
@@ -1,4 +1,3 @@
----
 include:
 - "**/*.rb"
 exclude:
@@ -11,5 +10,5 @@ domains: []
 reporters:
 - rubocop
 - require_not_found
-require_paths: []
-max_files: 5000
+-
+max_files: 500o
